run docker service commands in compose

--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -12,4 +12,4 @@ RUN pip install --upgrade -r /code/requirements.txt
 # Copy app files
 ADD ./app /code/app
 
-CMD ["/app/scripts/wait-for-it.sh", "kafka:9092", "--", "uvicorn", "app.main:app", "--host", "0.0.0.0", "--reload", "--port", "8000"]
+# CMD ["/app/scripts/wait-for-it.sh", "kafka:9092", "--", "uvicorn", "app.main:app", "--host", "0.0.0.0", "--reload", "--port", "8000"]
