--- a/kafka_consumer/Dockerfile
+++ b/kafka_consumer/Dockerfile
@@ -18,6 +18,6 @@ COPY ./kafka_consumer.py /app/kafka_consumer.py
 
 # Run the consumer script when the container starts
 # CMD ["python", "kafka_consumer_db_inserter.py"]
-CMD ["sh", "-c", "./scripts/wait-for-it.sh kafka:9092 -- ls *.py | entr -n -r python kafka_consumer.py"]
+# CMD ["sh", "-c", "./scripts/wait-for-it.sh kafka:9092 -- ls *.py | entr -n -r python kafka_consumer.py"]
 
 # CMD ls *.py | entr -n -r python kafka_consumer.py
