--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -69,6 +69,8 @@ services:
       POSTGRES_DB: airflow
     volumes:
       - postgres-db-volume:/var/lib/postgresql/data
+      - ./src/scripts/create_users_dbs.sh:/docker-entrypoint-initdb.d/create_users_dbs.sh
+
     healthcheck:
       test: ["CMD", "pg_isready", "-U", "airflow"]
       interval: 10s
@@ -298,6 +300,8 @@ services:
   api:
     <<: *common-service
     build: ./api
+    command: >          # Use the '>' for multi-line commands
+      /app/scripts/wait-for-it.sh kafka:9092 -- uvicorn app.main:app --host 0.0.0.0 --reload --port 8000    
     volumes:
       - ./api/app:/code/app
     ports:
@@ -306,6 +310,7 @@ services:
   kafka-consumer:
     <<: *common-service
     build: ./kafka_consumer    # The Dockerfile is in this directory
+    command: sh -c "/app/scripts/wait-for-it.sh kafka:9092 -- ls *.py | entr -n -r python kafka_consumer.py"
     volumes:
       - ./kafka_consumer/kafka_consumer.py:/app/kafka_consumer.py
     depends_on:
@@ -316,6 +321,7 @@ services:
   database-service:
     <<: *common-service
     build: ./database_service
+    command: uvicorn database_service:app --host 0.0.0.0 --reload --port 8001
     ports:
       - 8001:8001
     volumes:
